--- a/ejercicio04.html
+++ b/ejercicio04.html
@@ -8,16 +8,16 @@
     <h1 id="encabezado">DOM en JavaScript. Añadir y borrar elemento </h1>
     <div class="lista">
       <p class="description">Cosas que son violeta:</p>
-      <ul>
+      <ul id="lista">
         <li>ciruelas</li>
         <li>amatista</li>
         <li>lavanda</li>
         <li>berenjena</li>
       </ul>
-      <input type="text" class="AñadirElemento">
-      <button >Añadir</button>   
-      <button >BorrarUltimo</button>
-      <button >BorrarPrimero</button>
+      <input type="text" id="AñadirElemento" class="AñadirElemento">
+      <button id="b1">Añadir</button>   
+      <button id="b2">BorrarUltimo</button>
+      <button id="b3">BorrarPrimero</button>
       <script type="text/javascript" src="js/ejercicio04.js"></script>
     </div>
   </body>
