--- a/ejercicio02.html
+++ b/ejercicio02.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ejercicio 02</title>
+    <title>Ejercicio 02</title> 
   </head>
   <body>   
+    <div id="caja" style="width: 100px">
+        <p>parrafo1</p>
+        <p>parrafo2</p>
+        <p>parrafo3</p>
+        <p>parrafo4</p>
+      <button id="boton">Fondo oscuro</button>   
+    </div>
     <script type="text/javascript" src="js/ejercicio02.js"></script>
   </body>
 </html>
