--- a/ejercicio01.html
+++ b/ejercicio01.html
@@ -7,8 +7,8 @@
   <body>
     <h1 >DOM en JavaScript </h1>
     <p>Modificando atributos de elementos</p> 
-    <input > 
-    <button >Cambiar el color del encabezado</button>
+    <input id="colour" type="color"> 
+    <button id="button">Cambiar el color del encabezado</button>
     <script type="text/javascript" src="js/ejercicio01.js"></script>
   </body>
 </html>
